package models.interfaces;

public interface Completable {
    boolean isCompleted();
}
