package models.utils;

public enum Status{
    PENDING, IN_PROGRESS, COMPLETED;

    Status() {
    }
}
