package utils.exceptions;

public class EmptyProjectException extends Exception{
    public EmptyProjectException(String message) {
        super(message);
    }
}
