package utils.exceptions;

public class InvalidInputException extends Exception{

    public InvalidInputException(String message) {
        super(message);
    }
}
