package utils.exceptions;

public class ProjectNotCreatedException extends Exception{
    public ProjectNotCreatedException(String message) {
        super(message);
    }
}
