@startuml
title Project Management System UML

' =======================
' MODELS
' =======================
package "models" {

  abstract class Project {
    - id: String
    - name: String
    - description: String
    - budget: int
    - type: String
    - teamSize: int
    - tasks: Task[]
    --
    + Project(name, type, description, budget, teamSize)
    + getProjectDetails(): String[]
    + getTasks(): Task[]
    + addTask(task: Task): void
  }

  class SoftwareProject extends Project {
    - technology: String
    - domain: String
    - versioning: String
    --
    + getProjectDetails(): String[]
  }

  class HardwareProject extends Project {
    - component: String
    - weight: float
    --
    + getProjectDetails(): String[]
  }

  class Task {
    - taskID: String
    - name: String
    - status: utils.Status
    --
    + isCompleted(): boolean
  }

  abstract class User {
    - id: String
    - name: String
    - email: String
    --
    + login(): void
    + removeTask(projectID: String, taskId: String): void
    + getRole(): String
  }

  class AdminUser extends User {
    ~ projectService: services.ProjectService
    ~ taskService: services.TaskService
    --
    + removeTask(projectID: String, taskId: String): void
    + getRole(): String
  }

  class RegularUser extends User {
    + getRole(): String
  }

  class StatusReport {
    - projectID: String
    - projectName: String
    - totalTasks: int
    - completedTasks: int
    - completionPercentage: float
    --
    + StatusReport(id, name, total, completed, percentage)
  }
}

package "interfaces" {
  interface Completable {
    + isCompleted(): boolean
  }
}

package "services" {

  class ProjectService {
    - projects: models.Project[]
    --
    + allProjects(): Project[]
    + addProject(project: Project): void
    + filterProject(type: String): Project[]
    + filterProject(min: int, max: int): Project[]
    + filterProjectBYId(id: String): Project
  }

  class TaskService {
    - projectService: ProjectService
    --
    + addTaskToProject(projectId, name, status): void
    + updateTaskStatus(projectId, status, taskId): void
    + getProjectTasks(projectId): Task[]
    + getTaskIndex(project: models.Project, taskId: String): int
  }

  class ReportService {
    - taskService: TaskService
    --
    + generateReport(projects: Project[]): StatusReport[]
    + completionPercentage(projectId: String): float
  }

  class UserService {
   - projectService: ProjectService
   - taskService: TaskService

   - adminUser: models.User
   - regularUser: models.User

   + switchUser(currentUser: models.User): models.User
   + getAdminUser(): models.User
  }
}

package "utils" {

  enum Status {
    PENDING
    IN_PROGRESS
    COMPLETED
  }

  class ValidationUtils {
    {static} + getValidInt(prompt: String, min: int, max: int): int
    {static} + getValidInt(prompt: String, min: double): int
    {static} + getValidString(prompt: String): String
    {static} + getValidType(prompt: String): String
    {static} + getValidStatus(prompt: String): Status
    {static} + getValidId(prompt: String, prefix: char): String
    {static} - isValidId(id: String, prefix: char): boolean
  }

  package "exceptions" {
    class InvalidInputException
    class TaskNotFoundException
    class ProjectNotFoundException
    class EmptyProjectException
    class ProjectNotCreatedException
  }
}


package "tests" {

  class ProjectServiceTest {
    + setUp(): void
    + testCreateProject_success(): void
    + testGetProjectById_notFound(): void
    + testFilterByBudgetRange(): void
  }

  class ReportServiceTest {
    + setUp(): void
    + testGenerateReport(): void
  }

  class TaskServiceTest {
    + setUp(): void
    + testAddTask_success(): void
    + testUpdateTaskStatus_success(): void
    + testUpdateTaskStatus_emptyProject(): void
    + testUpdateTaskStatus_taskNotFound(): void
  }

  class UserServiceTest {
    + setup(): void
    + testAdminUserInitialization(): void
    + testSwitchUser_fromAdminToRegular(): void
    + testSwitchUser_fromRegularToAdmin(): void
  }

  class ValidationUtilsTest {
    + setUp(): void
    + testGetValidInt_success(): void
    + testGetValidString_empty(): void
    + testGetValidType_invalid(): void
    + testGetValidId_invalid(): void
  }
}

models.SoftwareProject --|> models.Project
models.HardwareProject --|> models.Project
models.AdminUser --|> models.User
models.RegularUser --|> models.User
models.Task ..|> interfaces.Completable

models.Project o-- models.Task : contains

services.TaskService *-- services.ProjectService
services.ReportService *-- services.TaskService
models.AdminUser *-- services.ProjectService
models.AdminUser *-- services.TaskService
services.UserService *-- models.AdminUser
services.UserService *-- models.RegularUser

utils.ValidationUtils ..> utils.Status

tests.ProjectServiceTest ..> services.ProjectService
tests.ProjectServiceTest ..> models.Project
tests.ProjectServiceTest ..> models.SoftwareProject
tests.ProjectServiceTest ..> utils.exceptions.ProjectNotFoundException

tests.ReportServiceTest ..> services.ReportService
tests.ReportServiceTest ..> services.TaskService
tests.ReportServiceTest ..> services.ProjectService
tests.ReportServiceTest ..> models.Project
tests.ReportServiceTest ..> models.SoftwareProject
tests.ReportServiceTest ..> utils.Status

tests.TaskServiceTest ..> services.TaskService
tests.TaskServiceTest ..> services.ProjectService
tests.TaskServiceTest ..> models.Task
tests.TaskServiceTest ..> utils.exceptions.EmptyProjectException
tests.TaskServiceTest ..> utils.exceptions.TaskNotFoundException

tests.UserServiceTest ..> services.UserService
tests.UserServiceTest ..> services.ProjectService
tests.UserServiceTest ..> services.TaskService
tests.UserServiceTest ..> models.AdminUser
tests.UserServiceTest ..> models.RegularUser

tests.ValidationUtilsTest ..> utils.ValidationUtils
tests.ValidationUtilsTest ..> utils.exceptions.InvalidInputException

@enduml
